welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value T
	T=tableaucouleur()
        ^Array1:8: error: not found: value T
    peindre(T)
            ^